# square

./: .gitignore  README.md
.github/workflows/: main.yml
angular/: angular.json  package-lock.json  package.json
angular/html/: index.html  login.html  register.html
angular/src/: index.html
archive/html/: home.css  home.js
auxiliary/: main.yml
auxiliary/trending_schedule/: .env  .env_dev  .env_prod  Cargo.toml
auxiliary/trending_schedule/src/: main.rs
backend/: .gitignore  20200329T134759Z  api_comments.go  api_posts.go  api_user.go  apis.go  app.go  comment.go  common.go  db.go  go.mod  go.sum  hello.go  main.go  package-lock.json  pom.xml  post.go  server.go  test_data.csv  user.go
backend/apis/: comments.go  posts.go  user.go
backend/assets/: db.schema
backend/auth/: auth.go
backend/db/: db.go
backend/lib/: auth.go  db.go  utils.go  utils_test.go
backend/models/: comment.go  common.go  mark.go  post.go  user.go
deploy/: clean.sh  docker-compose.yml
deploy/frontend/: asset-manifest.json  index.html  precache-manifest.0f74e0dd15259f60f4ab213e5086b304.js  service-worker.js
deploy/tls/: www.masq.xyz.crt  www.masq.xyz.csr  www.masq.xyz.key
doc/: api.md  backend.md  database.md  mistakes.md  overview.md
docker/: clean.sh  docker-compose.yml
docker/conf/: nginx.conf  redis.conf
docker/pginit/: 1.sql  2.sql  3.sql  4.sql  (+3 more)
frontend/: README.md  package-lock.json  package.json
html/: comments.html  home.css  home.html  home.js  index.css  index.html  index.js  login.html  marked.html  register.html  setting.html  square.js  style.css
(+229 files in other folders)
